# emberdawn-irrlicht

./: .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  irr-readme.txt  vcpkg.json
.github/workflows/: build.yml
doc/: release_checklist.txt
examples/: CMakeLists.txt
examples/AutomatedTest/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  IrrCmakeConfigured.h.in  IrrCompileConfig.h  IrrLegacyCompileConfig.h  SIrrCreationParameters.h  exampleHelper.h
scripts/: BindingGenerator.lua
source/Irrlicht/: CGLXManager.cpp  CIrrDeviceOSX.mm  CMakeLists.txt  COGLES2Driver.cpp  COpenGLDriver.cpp
src/: CAnimatedMeshSceneNode.cpp  CAttributeImpl.h  CB3DMeshFileLoader.cpp  CB3DMeshFileLoader.h  CBillboardSceneNode.h  CFileSystem.h  CGUIButton.h  CGUIEnvironment.cpp  CGUIEnvironment.h  CGUIFileOpenDialog.h  CGUIFont.cpp  CGUIFont.h  CGUIImage.h  CGUIInOutFader.cpp  CGUIListBox.h  CGUIMessageBox.cpp  CGUIMessageBox.h  CGUIModalScreen.cpp  CGUIModalScreen.h  CGUIScrollBar.h  CGUISkin.h  CGUITable.h  CGUIWindow.h  CImageLoaderPNG.cpp  CImageWriterPNG.cpp  CIrrDeviceLinux.cpp  CIrrDeviceOSX.h  CIrrDeviceStub.h  CIrrDeviceWin32.cpp  CIrrDeviceWin32.h  CMakeLists.txt  CNSOGLManager.h  CNullDriver.cpp  CNullDriver.h  COGLES2Driver.cpp  COGLES2Driver.h  COGLESDriver.cpp  COGLESDriver.h  COSOperator.cpp  COSOperator.h  (+17 more)
src/Android/: CAndroidAssetFileArchive.cpp  CAndroidAssetFileArchive.h  CAndroidAssetReader.cpp  CIrrDeviceAndroid.cpp  CIrrDeviceAndroid.h
src/gui/: CGUICheckBox.h  CGUIComboBox.h  CGUIContextMenu.cpp  CGUIContextMenu.h  CGUIEditBox.h  CGUIFileOpenDialog.cpp  CGUIInOutFader.h  CGUISpinBox.cpp  CGUISpinBox.h  CGUIStaticText.h  CGUITabControl.cpp  CGUITabControl.h  CGUITable.cpp  CGUIWindow.cpp
src/io/: CAttributes.h  CFileSystem.cpp  CZipReader.cpp
src/scene/: CCameraSceneNode.h  CDefaultSceneNodeFactory.cpp  CMeshManipulator.cpp  CSceneCollisionManager.h  CSceneManager.cpp  CSceneManager.h
src/scene/mesh/: CAnimatedMeshSceneNode.h  CBoneSceneNode.cpp  CBoneSceneNode.h  CMeshSceneNode.h
src/scene/mesh/loader/: CB3DMeshFileLoader.h  COBJMeshFileLoader.cpp  COBJMeshFileLoader.h  CXMeshFileLoader.cpp  CXMeshFileLoader.h
src/video/driver/: CGLXManager.cpp  CIrrDeviceConsole.cpp  CIrrDeviceConsole.h  CIrrDeviceFB.cpp  CIrrDeviceLinux.cpp  CIrrDeviceLinux.h  CIrrDeviceOSX.mm  CIrrDeviceSDL.cpp  CIrrDeviceSDL.h  CIrrDeviceStub.cpp  CNullDriver.cpp  CNullDriver.h  COGLES2Driver.cpp  COGLESDriver.cpp  COGLESExtensionHandler.cpp  COpenGLCommon.h  COpenGLCoreRenderTarget.h  COpenGLCoreTexture.h  CWGLManager.cpp
src/video/image/: CImage.cpp  CImage.h  CImageLoaderJPG.h  CImageLoaderPNG.cpp
tools/GUIEditor/: CGUIAttributeEditor.cpp  CGUIAttributeEditor.h  CGUIBoolAttribute.h  CGUIColorAttribute.h  CGUIEditFactory.cpp  CGUIEditWindow.cpp  CGUIEditWindow.h  CGUIEditWorkspace.cpp  CGUIEditWorkspace.h  CGUIEnumAttribute.h  CGUIPanel.cpp  CGUITextureAttribute.h  CGUITextureCacheBrowser.cpp  CGUITextureCacheBrowser.h  main.cpp
